--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
   
-    <link rel="stylesheet" href="./SRC/CSS/reset.css">
-    <link rel="stylesheet" href="./SRC/CSS/estilos.css">
-    <link rel="stylesheet" href="./SRC/CSS/rolagem.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/estilos.css">
+    <link rel="stylesheet" href="./src/css/rolagem.css">
 
     <title>Mini Portifólio</title>
   </head>
   <body>
     <main class="cartao">
       <div class="minhas-informacoes">
-        <img src="./SRC/IMAGENS/foto-perfil.JPG" alt="foto de perfil">
+        <img src="./src/imagens/foto-perfil.JPG" alt="foto de perfil">
         <h1 class="nome">Michele de Oliveira</h1>
         <h2 class="cargo">Desenvolvedora Front-end Junior</h2>
       </div>
@@ -26,10 +26,10 @@
       <div class="conteudo">
         <ul class="abas">
           <li class="aba selecionado" id="sobre-mim">
-            <img src="./SRC/IMAGENS/sobre.gif" alt="icone de sobre mim">
+            <img src="./src/imagens/sobre.gif" alt="icone de sobre mim">
           </li>
           <li class="aba" id="minhas-redes">
-            <img src="./SRC/IMAGENS/coracao.gif" alt="icone de rede sociais">
+            <img src="./src/imagens/coracao.gif" alt="icone de rede sociais">
           </li>
         </ul>
 
@@ -79,6 +79,6 @@
       </div>
     </main>
 
-    <script src="./SRC/JS/INDEX.JS"></script>
+    <script src="./src/js/index.js"></script>
   </body>
 </html>
