--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="minhas-informacoes">
         <img src="./src/imagens/foto-perfil.JPG" alt="foto de perfil">
         <h1 class="nome">Michele de Oliveira</h1>
-        <h2 class="cargo">Desenvolvedora Front-end Junior</h2>
+        <h2 class="cargo">Desenvolvedora Junior</h2>
       </div>
 
       <div class="conteudo">
